helpful links added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
             <a href="https://zaxxon709.github.io/repo/repository.709-1.0.2.zip" class="btn btn-primary" download>Download</a>
             <h1>Fenastic</h1>
             <a href="https://ivarbrandt.github.io/repository.ivarbrandt/repository.ivarbrandt-1.0.1.zip" class="btn btn-primary" download>Download</a>
+            <h1>Otaku</h1>
+            <a href="https://goldenfreddy0703.github.io/repository.otaku/repository.otaku-1.0.zip" class="btn btn-primary" download>Download</a>
         </div>
     </div>
 
