helpful links added again

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <a href="https://ivarbrandt.github.io/repository.ivarbrandt/repository.ivarbrandt-1.0.1.zip" class="btn btn-primary" download>Download</a>
             <h1>Otaku</h1>
             <a href="https://goldenfreddy0703.github.io/repository.otaku/repository.otaku-1.0.zip" class="btn btn-primary" download>Download</a>
+            <h1>Asgard</h1>
+            <a href="https://mylostsoulspace.co.uk/repo/repository.LostSoul-1.1.9.zip" class="btn btn-primary" download>Download</a>
         </div>
     </div>
 
