helpful links added again again

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             <h1>Kodi</h1>
             <a href="https://mirrors.kodi.tv/releases/android/arm/kodi-21.0-Omega-armeabi-v7a.apk?https=1" class="btn btn-primary" download>Download</a>
             <h1>Fen</h1>
-            <a href="https://tikipeter.github.io/packages/plugin.video.fenlight-1.0.54.zip" class="btn btn-primary" download>Download</a>
+            <a href="https://cocojoe2411.github.io/repository.cocoscrapers-1.0.0.zip" class="btn btn-primary" download>Download</a>
+            <h1>Coco</h1>
+            <a href="https://mylostsoulspace.co.uk/repo/repository.LostSoul-1.1.9.zip" class="btn btn-primary" download>Download</a>
             <h1>Account Manager</h1>
             <a href="https://zaxxon709.github.io/repo/repository.709-1.0.2.zip" class="btn btn-primary" download>Download</a>
             <h1>Fenastic</h1>
